--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "allan-variance"]
-	path = allan-variance
-	url = https://github.com/nmayorov/allan-variance.git
+[submodule "allan_variance"]
+	path = allan_variance
+	url = https://github.com/hollydinkel/allan_variance.git
