--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 __pycache__/
 .DS_Store
+MagPIE/bag_to_csv.__py
+MagPIE/EKF_multi_imu2.ipynb
+MagPIE/dataset
+data
+MagPIE/inertial_navigation.ipynb
