Add MagPIE dataset and codes

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 __pycache__/
 .DS_Store
-MagPIE/bag_to_csv.__py
+MagPIE/bag_to_csv_area.py
+MagPIE/bag_to_csv_mocap.py
+MagPIE/bag_to_csv_start.py
 MagPIE/EKF_multi_imu2.ipynb
-MagPIE/dataset
+MagPIE/dataset/Ground_Truth_Evaluation
 data
 MagPIE/inertial_navigation.ipynb
