Revert "Add MagPIE dataset and codes"
This reverts commit 5fca1512b6d3386a1a5fb14329fd7a689d1c574e.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 __pycache__/
 .DS_Store
-MagPIE/bag_to_csv_area.py
-MagPIE/bag_to_csv_mocap.py
-MagPIE/bag_to_csv_start.py
+MagPIE/bag_to_csv.__py
 MagPIE/EKF_multi_imu2.ipynb
-MagPIE/dataset/Ground_Truth_Evaluation
+MagPIE/dataset
 data
